--- a/Homepage_folder/Homepage.html
+++ b/Homepage_folder/Homepage.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <!-- Link naar de CSS sheet -->
-    <link rel="Homepage_styles" href="Homepage_styles.css">
+    <link rel="stylesheet" href="Homepage_styles.css">
+    <title> Homepage </title>
   </head>
 </html>
 
 <body>
 <h1> This is a heading with a blue border </h1>
+<p> <a href="/Login_folder/Login_screen.html"> Login </a></p>
 </body>
