De structuur van de volledige website.

--- a/Homepage_folder/Homepage.html
+++ b/Homepage_folder/Homepage.html
@@ -9,5 +9,5 @@
 
 <body>
 <h1> This is a heading with a blue border </h1>
-<p> <a href="/Login_folder/Login_screen.html"> Login </a></p>
+<p> <a href="/Login_folder/Login_screen.html" title="Go to login screen"> Login </a></p>
 </body>
