--- a/Login_folder/Registratiescherm.html
+++ b/Login_folder/Registratiescherm.html
@@ -1,7 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
-       <title> </title>
+    
     </head>
+
+    <body>
+        <form>
+            <div>
+                <h2> Sign up for the webshop</h2>
+                    <p> Please fill in this form this form to create an account.</p>
+                    <hr>
+
+                        <label for="email">Email </label>
+                        <input type="text" name="email" placeholder="Enter your email" required>
+
+                        <label for="username">Username</label>
+                        <input type="text" name="username" placeholder="Enter a username" required>
+
+                        <label for="password">Password</label>
+                        <input type="password" name="password" placeholder="Enter your password" required>
+
+                        <label for="password_2">Repeat Password</label>
+                        <input type="password" name="password_2" placeholder="Repeat your password"  required>
+
+                        <a href="Useraccount_information.html">
+                            <button type="submit"> submit</button> 
+                        </a>
+
+
+            </div>
+        </form>
+    </body>
 
 </html>
