--- a/Login_folder/Registratiescherm.html
+++ b/Login_folder/Registratiescherm.html
@@ -12,16 +12,16 @@
                     <hr>
 
                         <label for="email">Email </label>
-                        <input type="text" name="email" placeholder="Enter your email" required>
+                        <input type="text" name="email" placeholder="Enter your email" required> <br>
 
                         <label for="username">Username</label>
-                        <input type="text" name="username" placeholder="Enter a username" required>
+                        <input type="text" name="username" placeholder="Enter a username" required> <br>
 
                         <label for="password">Password</label>
-                        <input type="password" name="password" placeholder="Enter your password" required>
+                        <input type="password" name="password" placeholder="Enter your password" required> <br>
 
                         <label for="password_2">Repeat Password</label>
-                        <input type="password" name="password_2" placeholder="Repeat your password"  required>
+                        <input type="password" name="password_2" placeholder="Repeat your password"  required> <br>
 
                         <a href="Useraccount_information.html">
                             <button type="submit"> submit</button> 
