add_user.php is made to connect registering users to the database

--- a/Login_folder/Registratiescherm.html
+++ b/Login_folder/Registratiescherm.html
@@ -23,9 +23,26 @@
                         <label for="password_2">Repeat Password</label>
                         <input type="password" name="password_2" placeholder="Repeat your password"  required> <br>
 
-                        <a href="Useraccount_information.html">
-                            <button type="submit"> submit</button> 
-                        </a>
+                        <hr>
+
+                        <p> Please fill in your personal info here</p>
+
+                        <label for="firstname">Firstname</label>
+                        <input type="text" name="firstname" required> <br>
+
+                        <label for="lastname">Lastname</label>
+                        <input type="text" name="lastname" required?> <br>
+
+                        <label for="phonenumber">Phonenumber</label>
+                        <input type="text" name="phonenumber" required> <br>
+
+                        <label for="postalcode">Postalcode</label>
+                        <input type="text" name="postalcode" required> <br>
+
+                        <label for="housenumber">Housenumber</label>
+                        <input type="text" name="housenumber" required> <br> 
+                       
+            
 
 
             </div>
