Geen veranderingen, puur voor update server

--- a/Homepage_folder/Homepage.html
+++ b/Homepage_folder/Homepage.html
@@ -10,7 +10,7 @@
 <body>
   <ul>
     <li><a href="Homepage.html">Home</a></li>
-    <li><a href="Login_screen.html">Login</a></li>
+    <li><a href="Login_folder/Login_screen.html">Login</a></li>
     <li style="float:left"><a class="active" href="registratiescherm.html">Registration</a></li>
   </ul>
 
