--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html>
   <head>
     <!-- Link naar de CSS sheet -->
-    <link rel="stylesheet" href="Homepage_styles.css">
+    <link rel="stylesheet" href="Homepage_stylesheet.css">
     <title> Homepage </title>
   </head>
 </html>
 
 <body>
-<h1> This is a heading with a blue border </h1>
-<p> <a href="/Login_folder/Login_screen.html" title="Go to login screen"> Login </a></p>
+  <ul>
+    <li><a href="Homepage.html">Home</a></li>
+    <li><a href="Login_folder/Login_screen.html">Login</a></li>
+    <li style="float:left"><a class="active" href="registratiescherm.html">Registration</a></li>
+  </ul>
+
+<h1> Welcome to Fit 'n Flavors! </h1>
+<h2> The online webshop for your protein products</h2>
+<p> <a href="/Login_folder/Login_screen.html" class="button" title="Go to login screen"> Login </a></p>
+href="Login_folder/registratiescherm.html" class="button" title="Registreren"
+
 </body>
