--- a/Login_folder/Login_screen.html
+++ b/Login_folder/Login_screen.html
@@ -2,19 +2,20 @@
 <html>
     <head>
         <link rel="stylesheet" href="Login_stylesheet.css">
-        <h1> LOGIN PAGE </h1> 
+        <link rel="javascript" href="login_scherm.js">
     </head>
 
     <body>
         <!-- Invoer van de inloggegevens -->
-        <h2> ENTER YOUR USERNAME AND PASSWORD </h2>
+        <h2> WELCOME</h2>
+        <hr>
 
-        <div>
-            <label class="logintext">Username</label>
-                <input type="text" name = 'name' autofocus placeholder="voer hier uw gebruikersnaam in" required/>
-            <label class="logintext">Password</label>
-                <input type= "password" name = "password" autofocus placeholder="voer hier uw wachtwoord in" required/> <br>
-            <button type="submit"> Inloggen</button>
+        <div class="container">
+            <label>Username</label>
+                <input type="text" name = 'name' autofocus placeholder="Enter username" required/> <br>
+            <label>Password</label> 
+                <input type= "password" name = "password" autofocus placeholder="Enter password" required/> <br>
+            <button type="submit">Submit</button>
         </div>
 
          <p>
