--- a/Login_folder/Registratiescherm.html
+++ b/Login_folder/Registratiescherm.html
@@ -43,6 +43,7 @@
                             <input type="password" name="password_2" placeholder="Repeat your password"  required> <br>
 
                         </div>   
+                        <button type="submit">Submit</button>
                         <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
         </form>
     </body>
