add_user.php en het loginscherm hebben kleine aanpassingen gekregen waardoor het hopelijk nu verbinden heeft met de php

--- a/Login_folder/Login_screen.html
+++ b/Login_folder/Login_screen.html
@@ -11,16 +11,17 @@
         <hr>
 
         <div class="container">
-            <label>Username</label>
-                <input type="text" name = 'name' autofocus placeholder="Enter username" required/> <br>
-            <label>Password</label> 
-                <input type= "password" name = "password" autofocus placeholder="Enter password" required/> <br>
-            <button type="submit">Submit</button>
+            <label class="container"><b>Username</b></label> <br>
+            <input type="text" name = 'name' autofocus placeholder="Enter username" required/> <br>
+            <label class="container"><b>Password</b></label> <br>
+            <input type= "password" name = "password" autofocus placeholder="Enter password" required/> <br>
+
+            <button type="submit" class="registerbtn">Submit</button>
         </div>
 
          <p>
             <!--  Opties wanneer een inlog niet werkt -->
-            <a href="Registratiescherm.html"> Klik hier voor registratie</a>
+            <a href="Registratiescherm.html" > Klik hier voor registratie</a>
          </p>
 
         
