Corrected some minor errors

--- a/FAQ/Returns.html
+++ b/FAQ/Returns.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <h1>Returns and refunds</h1>
+    <h1>Returns and refund policy</h1>
     <h2>Return policy</h2>
     <p>You have 14 days from the date of receiving your item to start a return. We accept returns for all orders, provided they meet the following criteria:
         <ul>
@@ -37,7 +37,7 @@
     To be eligible for a return, your item must be in its original condition, unopened, with seals and tags intact, and in the original packaging. Please ensure you have the receipt or proof of purchase.<br>
     <br>
     You can always contact us for any return question at customerservice@fitflavors.nl </p>
-    
+
     <h4>Damages and issues</h4>
     <p>Upon receiving your order, please inspect the items. If you find any defects, damages, or receive the wrong item, kindly contact us immediately. This allows us to assess the issue and make it right for you.</p>
 
