--- a/Login_folder/Registratiescherm.html
+++ b/Login_folder/Registratiescherm.html
@@ -7,7 +7,14 @@
     </head>
 
     <body>
-        
+        <ul>
+            <li ><a href="Homepage_folder/Homepage.html">Home</a></li>
+            <li><a href="Products_folder/main_products_page.html">Products</a></li>
+            <li><a  href="Login_folder/Login_screen.html">Login</a></li>
+            <li style="float:left"><a class="active" href="Login_folder/registratiescherm.html">Registration</a></li>
+            <li><a href="FAQ/FAQ.html">FAQ</a></li>
+          </ul>
+
                 <h2> Sign up for the webshop</h2>
                     <hr>
                         <div class="container">
