Corrected some minor errors

--- a/FAQ/Returns.html
+++ b/FAQ/Returns.html
@@ -48,3 +48,4 @@
     <p>We will notify you once we have received and inspected your returned item, and let you know if the refund is approved or not. If approved, the refund will be automatically processed to your original payment method. Please keep in mind that it may take some time for your bank or credit card company to process and post the refund as well.</p>
 
 </body>
+</html>
