Footer toegevoegd aan homepage

--- a/Homepage_folder/Homepage.html
+++ b/Homepage_folder/Homepage.html
@@ -4,12 +4,7 @@
     <!-- Link naar de CSS sheet -->
     <link rel="stylesheet" href="Homepage_stylesheet.css">
     <title> Homepage </title>
-  </head>
-</html>
-
-<body>
-
-  <!-- Navigatie bar -->
+      <!-- Navigatie bar -->
   <ul>
     <li style="float:left"><a class="active" href="Homepage_folder/Homepage.html">Home</a></li>
     <li><a href="Products_folder/main_products_page.html">Products</a></li>
@@ -17,6 +12,12 @@
     <li><a href="Login_folder/registratiescherm.html">Registration</a></li>
     <li><a href="FAQ/FAQ.html">FAQ</a></li>
   </ul>
+  </head>
+
+
+<body>
+
+
 
   <!-- Slideshow container -->
   <div class="slideshow-container">
@@ -82,6 +83,43 @@ function showSlides(n) {
 
 
 <h1> Welcome to Fit 'n Flavors! </h1>
-<h2> The online webshop for your protein products</h2>
+<h2> Your ultimate destination for a healthy and flavorful lifestyle</h2>
+
+
+<!-- Footer -->
+<div class="footer"> 
+  <div class="row">
+    <div class="column">
+        <h3>About us</h3>
+        <p> At Fit 'n Flavors, we believe that nutrition forms the foundation for an energetic and balanced life. 
+          Our company has emerged from a shared passion for health, fitness, and delicious eating.
+          <br> 
+          <br> 
+          At Fit 'n Flavors, we strive to deliver high-quality, protein-rich products that are not only nutritious but also delightfully tasty. 
+          We understand that each individual has unique goals and taste preferences, which is why we have developed a wide range of products to meet all your needs.
+          <br> <br>
+          We aim to inspire you to bring out the best in yourself, both in the gym and beyond. Whether you're a seasoned athlete or just starting your fitness journey, Fit 'n Flavors is here to support you every step of the way.
+          Thank you for being a part of the Fit 'n Flavors family. Together, we are building a flavorful and healthy future!
+          </p>
+    </div>
+    <div class="column">
+      <br> <br>
+        <h3>Follow us!</h3>
+        <p>Social media linkjes</p>
+        <br> <br>
+        <h3>Costumerservice</h3>
+        <p class="links">
+          <a href="FAQ/FAQ.html">FAQ</a>
+          <br>
+          <a href="Delivery.html">Delivery information</a>
+          <br>
+          <a href="Contact.html">Contact</a>
+        </p>
+    </div>
+  </div>
+
+</div>
 
 </body>
+
+</html>
