--- a/Homepage_folder/Homepage.html
+++ b/Homepage_folder/Homepage.html
@@ -3,15 +3,20 @@
   <head>
     <!-- Link naar de CSS sheet -->
     <link rel="stylesheet" href="Homepage_stylesheet.css">
+
+    <!-- Link voor icoontjes -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title> Homepage </title>
-      <!-- Navigatie bar -->
+      
+    <!-- Navigatie bar -->
   <ul>
     <li style="float:left"><a class="active" href="Homepage_folder/Homepage.html">Home</a></li>
     <li><a href="Products_folder/main_products_page.html">Products</a></li>
+    <li><a href="FAQ/FAQ.html">FAQ</a></li>
     <li><a href="Login_folder/Login_screen.html">Login</a></li>
     <li><a href="Login_folder/registratiescherm.html">Registration</a></li>
-    <li><a href="FAQ/FAQ.html">FAQ</a></li>
   </ul>
+
   </head>
 
 
@@ -105,7 +110,11 @@ function showSlides(n) {
     <div class="column">
       <br> <br>
         <h3>Follow us!</h3>
-        <p>Social media linkjes</p>
+        <p><i class="fa fa-instagram"></i>
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-linkedin"></i>
+        
+        </p>
         <br> <br>
         <h3>Costumerservice</h3>
         <p class="links">
