--- a/Products_folder/main_products_page.html
+++ b/Products_folder/main_products_page.html
@@ -9,28 +9,9 @@
     <body>
         <h1> Products page </h1>
         <div id="product-container">
-
+            <a id="product1" href="/Products_folder/products_script.js">Piemel</a>
         </div>
-        <script>
-            function showProductDetails(productId) {
-            // Use AJAX to fetch product details from the server (using PHP/MySQL)
-            // Update the content of the product-container based on the response
-            // Example using fetch API:
-            
-            fetch('get_product_details.php?id=' + productId)
-                .then(response => response.json())
-                .then(data => {
-
-                    // Update the HTML content with the product details
-                    document.getElementById('product-container').innerHTML = `
-                        <h2>${data.productName}</h2>
-                        <p>${data.description}</p>
-                        <p>Price: ${data.price}</p>
-                        <!-- Add more details as needed -->
-                    `;
-                })
-                .catch(error => console.error('Error:', error));
-        }
+        <script src="/Products_folder/products_script.js">
         </script>
     </body>
 </html>
