Adding a main page and products details page that pulls the data from the php database to portray all the information

--- a/Products_folder/main_products_page.html
+++ b/Products_folder/main_products_page.html
@@ -1,17 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/Homepage_folder/Homepage_stylesheet.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Products Page</title>
+    <style>
+        /* Simple styling for the product grid */
+        .product-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 20px;
+            justify-content: center;
+        }
 
-    <body>
-        <h1> Products page </h1>
-        <div id="product-container">
-            <a id="product1" href="/Products_folder/products_script.js">Piemel</a>
-        </div>
-        <script src="/Products_folder/products_script.js">
-        </script>
-    </body>
+        .product {
+            border: 1px solid #ccc;
+            padding: 10px;
+            text-align: center;
+            cursor: pointer;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="product-grid" id="product-grid">
+        <!-- Products will be displayed here dynamically trough the javascrypt -->
+    </div>
+
+    <script>
+        // Function to fetch and display all products on the main page
+        function showAllProducts() {
+
+            // Use fetch API to get all product details from the server
+            fetch('get_all_products.php') 
+                .then(response => response.json())
+                .then(data => {
+                    // Update the product grid with the fetched product details
+                    const productGrid = document.getElementById('product-grid');
+                    productGrid.innerHTML = '';
+
+                    data.forEach(product => {
+                        const productElement = document.createElement('div');
+                        productElement.className = 'product';
+                        productElement.setAttribute('data-productid', product.ProductID);
+                        productElement.innerHTML = `
+                            <img src="${product.ProductImage}" alt="${product.ProductName} Image">
+                            <h3>${product.ProductName}</h3>
+                            <p>Price: ${product.ProductPrice}</p>
+                        `;
+                        productGrid.appendChild(productElement);
+
+                        // Add an event listener to each product element
+                        productElement.addEventListener('click', function () {
+                            const productId = this.getAttribute('data-productid');
+                            // Redirect to the product details page with the product ID
+                            window.location.href = `product-details.html?id=${productId}`;
+                        });
+                    });
+                })
+                .catch(error => console.error('Error:', error));
+        }
+
+        // Call the function when the page loads
+        window.onload = showAllProducts;
+    </script>
+</body>
 </html>
