--- a/Login_folder/Login_screen.html
+++ b/Login_folder/Login_screen.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Login_stylesheet.css">
         <link rel="javascript" href="login_scherm.js">
         <ul>
@@ -22,10 +23,9 @@
             <label class="login-text"><b>Username</b></label> <br>
             <input type="text" name = 'name' autofocus placeholder="Enter username" required/> <br>
             <label class="login-text "><b>Password</b></label> <br>
-            <input type= "password" name = "password" autofocus placeholder="Enter password" required/> <br>
+            <input type= "password" name = "password" autofocus placeholder="Enter password"required/> <br>
 
-            <button type="submit" class="registerbtn">Submit</button>
+            <input type="submit" class="registerbtn" value="Submit">
         </div>
-        </b>    
-    </body>
-</html>
+        
+ 
