--- a/Homepage_folder/Homepage.html
+++ b/Homepage_folder/Homepage.html
@@ -10,10 +10,10 @@
       
     <!-- Navigatie bar -->
   <ul>
-    <li><a href="Index.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="Products_folder/main_products_page.html">Products</a></li>
     <li><a href="Login_folder/Login_screen.html">Login</a></li>
-    <li><a href="Login_folder/Registratiescherm.html">Registration</a></li>
+    <li><a href="Login_folder/registratiescherm.html">Registration</a></li>
   </ul>
 
   </head>
@@ -108,9 +108,9 @@ function showSlides(n) {
     <div class="column">
       <br> <br>
         <h3>Follow us!</h3>
-        <p><i class="fa fa-instagram"></i>
-        <i class="fa fa-facebook"></i>
-        <i class="fa fa-linkedin"></i>
+        <p><a href="http://www.instagram.com/" ><i class="fa fa-instagram" style="font-size:24px"></i></a>
+          <a href="https://www.facebook.com" ><i class="fa fa-facebook" style="font-size:24px"></i></a>
+          <a href="https://www.linkedin.com" ><i class="fa fa-linkedin" style="font-size:24px"></i></a>
         
         </p>
         <br> <br>
